--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,1 @@
-println ">>> settings.gradle --> This is executed during the initialization phase  - timestamp @ ${gradle.timestamp()}"
-
-// logger.info ">>> settings.gradle: $settings.gradle.gradleVersion"
-// logger.info ">>> settings.gradle: $settings.gradle.gradleHomeDir"
-// logger.info ">>> settings.gradle: $settings.gradle.gradleUserHomeDir"
+rootProject.name = 'grama-gradle-under-the-hood'
