--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,7 @@
-println ">>> settings.gradle --> This is executed during configuration phase - timestamp @ ${gradle.timestamp()}"
+logger.info ">>> build.gradle --> This is executed during configuration phase - timestamp @ ${project.gradle.timestamp()}"
 
+logger.info ">>> build.gradle: $project.gradle.gradleVersion"
+logger.info ">>> build.gradle: $project.gradle.gradleHomeDir"
+logger.info ">>> build.gradle: $project.gradle.gradleUserHomeDir"
 
-// Lifecycle phases
-//  1. Initialization
-//       - creates project instances
-//       -> init.gradle
-//       -> settings.gradle
-//  2. Configuration
-//       -> build.gradle
-//  3. Execution
-//       -> tasks from build.gradle
 
