--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,5 @@
-println ">>> settings.gradle --> This is executed during initialisation phase - timestamp @ ${gradle.timestamp()}"
+logger.info ">>> settings.gradle --> This is executed during initialisation phase - timestamp @ ${gradle.timestamp()}"
+
+logger.info ">>> settings.gradle: $settings.gradle.gradleVersion"
+logger.info ">>> settings.gradle: $settings.gradle.gradleHomeDir"
+logger.info ">>> settings.gradle: $settings.gradle.gradleUserHomeDir"
