--- a/build.gradle
+++ b/build.gradle
@@ -4,4 +4,18 @@ logger.info ">>> build.gradle: $project.gradle.gradleVersion"
 logger.info ">>> build.gradle: $project.gradle.gradleHomeDir"
 logger.info ">>> build.gradle: $project.gradle.gradleUserHomeDir"
 
+logger.info ">>> build.gradle: $project.buildFile"
+logger.info ">>> build.gradle: ${project.relativePath(project.buildFile)}"
+
+
+logger.info """
+******************************************************************************
+Welcome to Gradle $gradle.gradleVersion - http://www.gradle.org
+Gradle home is set to: $gradle.gradleHomeDir
+Gradle user directory is set to: $gradle.gradleUserHomeDir
+
+Base directory: $projectDir
+Running script  ${relativePath(buildFile)}
+******************************************************************************
+"""
 
